crates/plotnik-tests/tests/04-emit/types/naming/error_annotation_on_void_ref.txt
A = (identifier)

Q = (program
  (expression_statement
    (A) @x :: Foo
  )
)
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:5:5
  |
1 | A = (identifier)
  |     ------------ defined here
...
5 |     (A) @x :: Foo
  |     ^^^
